docs: добавлена документация VPN проекта (WireGuard + Shadowsocks)
- README_FOR_NEXT_AGENT.md: описание архитектуры и профилей
- ROADMAP_VPN.md: план развития проекта
- DONE_LIST_VPN.md: выполненные задачи (2026-02-18)
- SESSION_SUMMARY_2026-02-18.md: резюме сессии
- .gitignore: исключение секретов из коммитов

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
+# Секреты - НИКОГДА не коммитить!
 env_vars.txt
-.env
-__pycache__/
-*.pyc
+*.key
+*.pem
+*.crt
+*.secret
 
-# Runtime data (пользователи, peers, приватные ключи и т.п.)
-bot/data/
+# Временные файлы
+*.tmp
+*.log
+*.bak
 
+# Резервные копии с сервера (если будут синхронизироваться)
+vpn-backups/
+backups/
+
+# OS файлы
+.DS_Store
+Thumbs.db
