--- a/web/vpn-web.service.example
+++ b/web/vpn-web.service.example
@@ -8,6 +8,7 @@ User=root
 WorkingDirectory=/opt/vpnservice
 Environment="PATH=/opt/vpnservice/venv/bin:/usr/local/bin:/usr/bin:/bin"
 Environment="FLASK_ENV=production"
+Environment="PORT=5001"
 ExecStart=/opt/vpnservice/venv/bin/python web/app.py
 Restart=always
 RestartSec=10
